--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EasyShop.com</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
         /* General Styles */
         body {
@@ -25,7 +26,9 @@
             padding: 20px;
         }
 
-        h1, h2, h3 {
+        h1,
+        h2,
+        h3 {
             color: #333;
         }
 
@@ -122,19 +125,20 @@
             margin-bottom: 20px;
             display: flex;
             align-items: center;
+            justify-content: flex-end; /* Moved to top right */
             transition: background-color 0.5s;
         }
 
         .search-input {
-            flex: 1;
-            padding: 10px;
+            flex: 0 0 200px; /* Reduced size */
+            padding: 8px; /* Smaller padding */
             border: 1px solid #ccc;
             border-radius: 5px;
             margin-right: 10px;
         }
 
         .search-button {
-            padding: 10px 20px;
+            padding: 8px 15px; /* Smaller padding */
             background-color: #333;
             color: #fff;
             border: none;
@@ -264,36 +268,12 @@
             }
 
             .search-bar {
-                flex-direction: column;
-                align-items: stretch;
+                justify-content: flex-start; /* Align to start on small screens */
             }
 
             .search-input {
-                margin-bottom: 10px;
-            }
-
-            .language-switcher {
-                flex-direction: column;
-                align-items: flex-end;
-            }
-
-            .dynamic-bg {
-                padding: 10px;
-            }
-
-            .featured-categories {
-                flex-direction: column;
-            }
-
-            .best-sellers-carousel {
-                flex-direction: column;
-                gap: 10px;
-                padding-bottom: 10px;
-                overflow-x: initial;
-            }
-
-            .best-seller-item {
-                width: 100%;
+                flex: 1; /* Fill remaining space */
+                margin-right: 0;
             }
         }
     </style>
@@ -406,8 +386,8 @@
 
         <!-- Search Bar Section -->
         <div class="search-bar">
-            <input type="text" class="search-input" placeholder="Search for products, terms, help, refund policy">
-            <button class="search-button" onclick="searchRedirect()">Search</button>
+            <input type="text" class="search-input" placeholder="Search...">
+            <button class="search-button" onclick="searchRedirect()"><i class="fas fa-search"></i></button>
         </div>
 
         <!-- Language Switcher Section -->
